creado properesties SQL