@@ -5,34 +5,34 @@ import com.TallerWapo.dominio.Puertos.baseDatos.Daos.vehiculoDao;
 import com.TallerWapo.dominio.contexto.ContextoGeneral;
 import com.TallerWapo.dominio.utiles.PropertiesUtils;
 
-import java.sql.Connection;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
+import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
 
 public class VehiculoSQLDaoImp implements vehiculoDao {
+    private final String ARCHIVO_SENTENCIAS_SQL = "sentenciasSQL/vehiculosSQL.properties";
 
-    private final Connection conexion = ContextoGeneral.baseDatosSQL.getConexion();
 
-    private final String VEHICULOS_SELECT_ALL = PropertiesUtils.getString("sentenciasSQL/vehiculosSQL.properties","VEHICULOS_SELECT_ALL",null);
+    private final String VEHICULOS_SELECT_ALL = PropertiesUtils.getString(ARCHIVO_SENTENCIAS_SQL,"VEHICULOS_SELECT_ALL",null);
+    private final String VEHICULOS_SELECT_MATRICULA = PropertiesUtils.getString(ARCHIVO_SENTENCIAS_SQL,"VEHICULOS_SELECT_MATRICULA",null);
+
+    private final String VEHICULOS_INSERT = PropertiesUtils.getString(ARCHIVO_SENTENCIAS_SQL,"VEHICULOS_INSERT",null);
+    private final String VEHICULOS_UPDATE = PropertiesUtils.getString(ARCHIVO_SENTENCIAS_SQL,"VEHICULOS_INSERT",null);
+    private final String VEHICULOS_DELETE = PropertiesUtils.getString(ARCHIVO_SENTENCIAS_SQL,"VEHICULOS_DELETE",null);
 
     @Override
     public List<VehiculoBO> findAll() throws Exception {
         List<VehiculoBO> list = new ArrayList<>();
 
+        Connection conexion = ContextoGeneral.baseDatosSQL.getConexion();
         Statement stmt = conexion.createStatement();
 
-        ResultSet rs = stmt.executeQuery(VEHICULOS_SELECT_ALL);{  // Asume tabla vehiculos
-            while (rs.next()) {
-                VehiculoBO v = new VehiculoBO();
-                v.setMarca(rs.getString("marca"));
-                v.setMatricula(rs.getString("matricula"));
-                v.setModelo(rs.getString("modelo"));
-                list.add(v);
-            }
+        ResultSet rs = stmt.executeQuery(VEHICULOS_SELECT_ALL);
+
+        while (rs.next()) {
+            list.add(mapearVehiculo(rs));
         }
+
         return list;
     }
 
@@ -40,43 +40,97 @@ public class VehiculoSQLDaoImp implements vehiculoDao {
     public VehiculoBO findByMatricula(String matricula) throws Exception {
         List<VehiculoBO> list = new ArrayList<>();
 
-        Statement stmt = conexion.createStatement();
+        Connection conexion = ContextoGeneral.baseDatosSQL.getConexion();
+        PreparedStatement ps = conexion.prepareStatement(VEHICULOS_SELECT_MATRICULA);
 
-        //TODO colocar en un properties
-        String query = "SELECT * FROM vehiculos where matricula ='" + matricula + "'";
+        ps.setString(1, matricula);
 
-        ResultSet rs = stmt.executeQuery(query);{  // Asume tabla vehiculos
-            while (rs.next()) {
-                VehiculoBO v = new VehiculoBO();
-                v.setMarca(rs.getString("marca"));
-                v.setMatricula(rs.getString("matricula"));
-                v.setModelo(rs.getString("modelo"));
-                list.add(v);
-            }
+        ResultSet rs = ps.executeQuery();
+        while (rs.next()) {
+            list.add(mapearVehiculo(rs));
         }
 
         if (list.size() > 1) {
             throw  new SQLException("Se han encontrado varios vehiculos para la misma matricula") ;
         }
+
         if (list.size() == 1) {
-            return list.get(0);
+            return list.getFirst();
         }
 
         return null;
     }
 
     @Override
-    public void guardarNuevoVehiculo(VehiculoBO vehiculo) throws Exception {
+    public boolean guardarNuevoVehiculo(VehiculoBO vehiculo) throws Exception {
 
+        Connection conexion = ContextoGeneral.baseDatosSQL.getConexion();
+        PreparedStatement ps = conexion.prepareStatement(VEHICULOS_INSERT);
+
+        setearVehiculo(ps, vehiculo);
+        ps.execute();
+
+        //TODO controlar que se inserta adecuadamente
+        if (false) {
+            throw new SQLException("No se pudo insertar el vehiculo");
+        }
+
+        return true;
     }
 
     @Override
-    public void actualizarVehiculo(VehiculoBO vehiculo) throws Exception {
+    public boolean actualizarVehiculo(VehiculoBO vehiculo) throws Exception {
 
+        Connection conexion = ContextoGeneral.baseDatosSQL.getConexion();
+        PreparedStatement ps = conexion.prepareStatement(VEHICULOS_UPDATE);
+        setearVehiculo(ps, vehiculo);
+
+        int filas = ps.executeUpdate();
+
+        if (filas == 0) {
+            return false;
+        }
+
+        if (filas > 1) {
+            throw new SQLException("Se actualiaron mas de un vehiculo con uuid: " + vehiculo.getUuid());
+        }
+
+        return true;
     }
 
     @Override
-    public void borrarVehiculo(VehiculoBO vehiculo) throws Exception {
+    public boolean borrarVehiculo(VehiculoBO vehiculo) throws Exception {
 
+        Connection conexion = ContextoGeneral.baseDatosSQL.getConexion();
+        PreparedStatement ps = conexion.prepareStatement(VEHICULOS_DELETE);
+        ps.setInt(1, vehiculo.getUuid());
+
+        int filas = ps.executeUpdate();
+
+        if (filas > 1) {
+            throw new SQLException("Se borraron mas de un vehiculo con uuid: " + vehiculo.getUuid());
+        }
+
+        if (filas == 0) {
+            return false;
+        }
+
+        return true;
+    }
+
+    private VehiculoBO mapearVehiculo(ResultSet rs) throws SQLException {
+        VehiculoBO vehiculo = new VehiculoBO();
+        vehiculo.setMatricula(rs.getString("matricula"));
+        vehiculo.setModelo(rs.getString("modelo"));
+        vehiculo.setMarca(rs.getString("marca"));
+        vehiculo.setCodidoEstado(rs.getString("cod_estado"));
+        return vehiculo;
+    }
+
+    private void setearVehiculo(PreparedStatement ps,VehiculoBO vehiculo) throws SQLException {
+        ps.setString(1, vehiculo.getMatricula());
+        ps.setString(2, vehiculo.getModelo());
+        ps.setString(3, vehiculo.getMarca());
+        ps.setString(4, vehiculo.getCodidoEstado());
     }
 }
